--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
             <label for="toggle-all">Mark all as complete</label>
         </form>
         <ul class="todo-list" th:remove="all-but-first">
-            <li th:insert="fragments :: toDoItem(${item})" th:each="item : ${todos}" th:remove="tag">
+            <li th:insert="fragments :: todoItem(${item})" th:each="item : ${todos}" th:remove="tag">
             </li>
             <li class="completed">
                 <div class="view">
